fixed main page wrap css and item detail css

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -13,7 +13,7 @@ body {
 
 #page-wrap {
     background-color: #f3f3f3;
-    height: 100%;
+    min-height: 100%;
 }
 
 #outer-container {
@@ -902,8 +902,12 @@ body {
                 background: #eeeeee;
                 transition: 0.8s ease;
                 overflow: hidden;
+                display: flex;
+                align-items: center;
                 img {
+                    // max-height: 636px;
                     max-height: 636px;
+                    max-width: 382px;
                     transition: transform 0.8s ease;
                     -moz-transform: rotate(1deg) scale(0.8);
                     -webkit-transform: rotate(1deg) scale(0.8);
